--- a/app/design/frontend/base/default/template/compunnel/recommendations/home.phtml
+++ b/app/design/frontend/base/default/template/compunnel/recommendations/home.phtml
@@ -5,13 +5,19 @@
 <?php if(!$_productCollection->count()): return; endif; ?>
 <div class="category-products block-highlight <?php echo $this->getClassName(); ?>">
     <div class="block-title">
-        <span><?php echo $this->__($this->getTitle()); ?></span>
+        
     </div>
     <div class="block-content">
-        <div class="slide-containor" id="<?php echo $this->getClassName(); ?>">
+        <div class="slide-containor reccomend_boxHld" id="<?php echo $this->getClassName(); ?>">
+        <div class="reccomend-title">
+                <span><?php echo $this->__($this->getTitle()); ?></span>
+        </div>
             <a href="javascript:void(0)" class="prev"><?php echo $this->__('Prev'); ?></a>
             <a href="javascript:void(0)" class="prev-dis"><?php echo $this->__('Prev'); ?></a>
-            <?php
+
+            <div class="recommend-box">
+
+                <?php
                 $_collectionSize = $_productCollection->count();
                 $_columnCount = $this->getColumnCount();
                 $i = 0;
@@ -91,12 +97,17 @@
             <?php endforeach; ?>
             <a href="javascript:void(0)" class="next"><?php echo $this->__('next'); ?></a>
             <a href="javascript:void(0)" class="next-dis"><?php echo $this->__('next'); ?></a>
+
+            </div>
+            
+
+
         </div>
         <script type="text/javascript">
             decorateGeneric($$('ul.products-grid'), ['odd', 'even', 'first', 'last']);
             var outerWdth = parseInt(jQuery('.slide-containor li').outerWidth()) + 5;
             var width = parseInt(jQuery('.slide-containor li').width()) + 2;
-            jQuery('.slide-containor ul.products-grid > li').width(width);
+            jQuery('.slide-containor ul.products-grid > li').width(width -24);
             jQuery('.slide-containor ul.products-grid > li').css('padding-left', parseInt(width / 30));
             jQuery('.slide-containor ul.products-grid > li').css('padding-right', parseInt(width / 30));
             jQuery(document).ready(function() {
