--- a/app/design/frontend/base/default/template/compunnel/recommendations/cart.phtml
+++ b/app/design/frontend/base/default/template/compunnel/recommendations/cart.phtml
@@ -22,13 +22,13 @@
                     ?>
                     <li class="item <?php if(($i-1) % $_columnCount == 0): ?>first<?php elseif($i % $_columnCount == 0): ?> last<?php endif; ?>" style="margin-bottom: 10px;height: 100px; ">
                         <div class="column1" style="width: 30%;float: left;clear: both;">
-                            <a href="<?php echo $_product->getProductUrl(); ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" class="product-image">
+                            <a href="<?php echo $this->getProductUrl($_product); ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" class="product-image">
                                 <img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->constrainOnly(true)->keepAspectRatio(false)->keepFrame(false)->resize(null,75); ?>" height="75" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" />
                             </a>
                         </div>
                         <div class="column2">
                             <h2 class="product-name">
-                                <a href="<?php echo $_product->getProductUrl(); ?>" title="<?php echo $this->stripTags($_product->getName(), null, true); ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?></a>
+                                <a href="<?php echo $this->getProductUrl($_product); ?>" title="<?php echo $this->stripTags($_product->getName(), null, true); ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?></a>
                             </h2>
                             <?php if($_product->getRatingSummary()): ?>
                                 <?php echo $this->getReviewsSummaryHtml($_product, 'short'); ?>
