--- a/app/design/frontend/base/default/template/compunnel/recommendations/home.phtml
+++ b/app/design/frontend/base/default/template/compunnel/recommendations/home.phtml
@@ -4,9 +4,7 @@
 ?>
 <?php if(is_null($_productCollection) || !$_productCollection->count()): return; endif; ?>
 <div class="category-products block-highlight <?php echo $this->getClassName(); ?>">
-    <div class="block-title">
-
-    </div>
+    <div class="block-title"></div>
     <div class="block-content">
         <div class="slide-containor reccomend_boxHld" id="<?php echo $this->getClassName(); ?>">
         <div class="reccomend-title">
@@ -14,94 +12,84 @@
         </div>
             <a href="javascript:void(0)" class="prev"><?php echo $this->__('Prev'); ?></a>
             <a href="javascript:void(0)" class="prev-dis"><?php echo $this->__('Prev'); ?></a>
-
             <div class="recommend-box">
-
                 <?php
-                $_collectionSize = $_productCollection->count();
-                $_columnCount = $this->getColumnCount();
-                $i = 0;
-            ?>
-            <?php foreach($_productCollection as $_product): ?>
-                <?php
-                    $currentstamp = strtotime(date('Y-m-d'));
-                    $publishstamp = strtotime($_product->getLepubdate());
+                    $_collectionSize = $_productCollection->count();
+                    $_columnCount = $this->getColumnCount();
+                    $i = 0;
                 ?>
-                <?php if($i++ % $_columnCount == 0): ?>
-                    <ul class="products-grid">
-                <?php endif ?>
-                <li class="item <?php if(($i-1) % $_columnCount == 0): ?>first<?php elseif($i % $_columnCount == 0): ?> last<?php endif; ?>">
-                    <a href="<?php echo $_product->getProductUrl(); ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" class="product-image">
-                        <img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->constrainOnly(true)->keepAspectRatio(false)->keepFrame(false)->resize(null,145); ?>" height="145" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" />
-                    </a>
-                    <?php if($_product->getCover()): ?>
-                        <span class="covertype">
-                            <?php
-                                $cover = $_product->getCover();
-                                $coverArr = explode('/', $cover);
-                                if(count($coverArr) > 1) {
-                                    echo $this->__($coverArr[1]);
-                                }
-                            ?>
-                        </span>
-                    <?php endif; ?>
-                    <?php
-                        $_price = Mage::helper('core')->currency($_product->getPrice(), false, false);
-                        $_finalPrice = Mage::helper('core')->currency($_product->getFinalPrice(), false, false);
-                    ?>
-                    <?php if($_finalPrice < $_price): ?>
-                        <?php $_savePercent = 100 - round(($_finalPrice / $_price) * 100); ?>
-                        <span class="discountper"><?php echo $_savePercent . " " . $this->__('% off'); ?></span>
-                    <?php endif; ?>
-                    <h2 class="product-name">
-                        <a href="<?php echo $_product->getProductUrl(); ?>" title="<?php echo $this->stripTags($_product->getName(), null, true); ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?></a>
-                    </h2>
-                    <?php if($_product->getRatingSummary()): ?>
-                        <?php echo $this->getReviewsSummaryHtml($_product, 'short'); ?>
-                    <?php endif; ?>
-                    <?php echo $this->getPriceHtml($_product, true, $this->getPriceSuffix()); ?>
-                    <div class="actions">
-                        <?php if($_product->isSaleable()): ?>
-                            <?php if($publishstamp > $currentstamp): ?>
-                                <button type="button" title="<?php echo $this->__('Pre Order'); ?>" class="button btn-cart" onclick="setLocation('<?php echo $this->getAddToCartUrl($_product); ?>')">
-                                    <span>
-                                        <span><?php echo $this->__('Pre Order'); ?></span>
-                                    </span>
-                                </button>
-                            <?php else: ?>
-                                <button type="button" title="<?php echo $this->__('Add to Cart'); ?>" class="button btn-cart" onclick="setLocation('<?php echo $this->getAddToCartUrl($_product); ?>')">
-                                    <span>
-                                        <span><?php echo $this->__('Add to Cart'); ?></span>
-                                    </span>
-                                </button>
+                <ul class="products-grid">
+                    <?php foreach($_productCollection as $_product): ?>
+                        <?php
+                            $currentstamp = strtotime(date('Y-m-d'));
+                            $publishstamp = strtotime($_product->getLepubdate());
+                        ?>
+                        <li class="item <?php if(($i-1) % $_columnCount == 0): ?>first<?php elseif($i % $_columnCount == 0): ?> last<?php endif; ?>">
+                            <a href="<?php echo $this->getProductUrl($_product); ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" class="product-image">
+                                <img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->constrainOnly(true)->keepAspectRatio(false)->keepFrame(false)->resize(null,145); ?>" height="145" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" />
+                            </a>
+                            <?php if($_product->getCover()): ?>
+                                <span class="covertype">
+                                    <?php
+                                        $cover = $_product->getCover();
+                                        $coverArr = explode('/', $cover);
+                                        if(count($coverArr) > 1) {
+                                            echo $this->__($coverArr[1]);
+                                        }
+                                    ?>
+                                </span>
                             <?php endif; ?>
-                        <?php else: ?>
-                            <p class="availability out-of-stock">
-                                <span><?php echo $this->__('Out of stock'); ?></span>
-                            </p>
-                        <?php endif; ?>
-                    </div>
-                    <ul class="add-to-links">
-                        <?php if ($this->helper('wishlist')->isAllow()): ?>
-                            <li>
-                                <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product); ?>" class="link-wishlist">
-                                    <span><?php echo $this->__('Add to Wishlist') ?></span>
-                                </a>
-                            </li>
-                        <?php endif; ?>
-                    </ul>
-                </li>
-                <?php if($i % $_columnCount == 0 || $i == $_collectionSize): ?>
-                    </ul>
-                <?php endif; ?>
-            <?php endforeach; ?>
-            <a href="javascript:void(0)" class="next"><?php echo $this->__('next'); ?></a>
-            <a href="javascript:void(0)" class="next-dis"><?php echo $this->__('next'); ?></a>
-
+                            <?php
+                                $_price = Mage::helper('core')->currency($_product->getPrice(), false, false);
+                                $_finalPrice = Mage::helper('core')->currency($_product->getFinalPrice(), false, false);
+                            ?>
+                            <?php if($_finalPrice < $_price): ?>
+                                <?php $_savePercent = 100 - round(($_finalPrice / $_price) * 100); ?>
+                                <span class="discountper"><?php echo $_savePercent . " " . $this->__('% off'); ?></span>
+                            <?php endif; ?>
+                            <h2 class="product-name">
+                                <a href="<?php echo $this->getProductUrl($_product); ?>" title="<?php echo $this->stripTags($_product->getName(), null, true); ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?></a>
+                            </h2>
+                            <?php if($_product->getRatingSummary()): ?>
+                                <?php echo $this->getReviewsSummaryHtml($_product, 'short'); ?>
+                            <?php endif; ?>
+                            <?php echo $this->getPriceHtml($_product, true, $this->getPriceSuffix()); ?>
+                            <div class="actions">
+                                <?php if($_product->isSaleable()): ?>
+                                    <?php if($publishstamp > $currentstamp): ?>
+                                        <button type="button" title="<?php echo $this->__('Pre Order'); ?>" class="button btn-cart" onclick="setLocation('<?php echo $this->getAddToCartUrl($_product); ?>')">
+                                            <span>
+                                                <span><?php echo $this->__('Pre Order'); ?></span>
+                                            </span>
+                                        </button>
+                                    <?php else: ?>
+                                        <button type="button" title="<?php echo $this->__('Add to Cart'); ?>" class="button btn-cart" onclick="setLocation('<?php echo $this->getAddToCartUrl($_product); ?>')">
+                                            <span>
+                                                <span><?php echo $this->__('Add to Cart'); ?></span>
+                                            </span>
+                                        </button>
+                                    <?php endif; ?>
+                                <?php else: ?>
+                                    <p class="availability out-of-stock">
+                                        <span><?php echo $this->__('Out of stock'); ?></span>
+                                    </p>
+                                <?php endif; ?>
+                            </div>
+                            <ul class="add-to-links">
+                                <?php if ($this->helper('wishlist')->isAllow()): ?>
+                                    <li>
+                                        <a href="<?php echo $this->helper('wishlist')->getAddUrl($_product); ?>" class="link-wishlist">
+                                            <span><?php echo $this->__('Add to Wishlist') ?></span>
+                                        </a>
+                                    </li>
+                                <?php endif; ?>
+                            </ul>
+                        </li>
+                    <?php endforeach; ?>
+                </ul>
+                <a href="javascript:void(0)" class="next"><?php echo $this->__('next'); ?></a>
+                <a href="javascript:void(0)" class="next-dis"><?php echo $this->__('next'); ?></a>
             </div>
-
-
-
         </div>
         <script type="text/javascript">
             decorateGeneric($$('ul.products-grid'), ['odd', 'even', 'first', 'last']);
