--- a/app/design/frontend/base/default/template/compunnel/recommendations/product.phtml
+++ b/app/design/frontend/base/default/template/compunnel/recommendations/product.phtml
@@ -30,7 +30,7 @@
                     <ul class="products-grid">
                 <?php endif ?>
                 <li class="item <?php if(($i-1) % $_columnCount == 0): ?>first<?php elseif($i % $_columnCount == 0): ?> last<?php endif; ?>">
-                    <a href="<?php echo $_product->getProductUrl(); ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" class="product-image">
+                    <a href="<?php echo $this->getProductUrl($_product); ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" class="product-image">
                         <img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->constrainOnly(true)->keepAspectRatio(false)->keepFrame(false)->resize(null,145); ?>" height="145" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true); ?>" />
                     </a>
                     <?php if($_product->getCover()): ?>
@@ -53,7 +53,7 @@
                         <span class="discountper"><?php echo $_savePercent . " " . $this->__('% off'); ?></span>
                     <?php endif; ?>
                     <h2 class="product-name">
-                        <a href="<?php echo $_product->getProductUrl(); ?>" title="<?php echo $this->stripTags($_product->getName(), null, true); ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?></a>
+                        <a href="<?php echo $this->getProductUrl($_product); ?>" title="<?php echo $this->stripTags($_product->getName(), null, true); ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name'); ?></a>
                     </h2>
                     <?php if($_product->getRatingSummary()): ?>
                         <?php echo $this->getReviewsSummaryHtml($_product, 'short'); ?>
