Work so far, no single task

--- a/app/design/frontend/base/default/template/compunnel/base.phtml
+++ b/app/design/frontend/base/default/template/compunnel/base.phtml
@@ -1,8 +1,9 @@
 <script type="text/javascript">
     //<![CDATA[
         predictionioUX.init({
-            content: "<?php echo $this->getUrl('prediction/index/index') ?>",
-            productid: "<?php echo (Mage::registry('current_product') ? Mage::registry('current_product')->getId() : ''); ?>"
+            content   : "<?php echo $this->getUrl('prediction/index/index'); ?>",
+            EventUrl  : "<?php echo $this->getUrl('prediction/index/event'); ?>",
+            productid : "<?php echo (Mage::registry('current_product') ? Mage::registry('current_product')->getId() : ''); ?>"
         });
     //]]>
 </script>
